# uv_cookie

./: .gitignore  .pre-commit-config.yaml  README.md  cookiecutter.json  pyproject.toml
.github/workflows/: run_tests.yaml
src/uv_cookie/: __init__.py  some_things.py
tests/: some_things_test.py
{{cookiecutter.project_slug}}/: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
{{cookiecutter.project_slug}}/data/: README.md
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  {{cookiecutter.file_name}}.py
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.file_name}}.py
{{cookiecutter.project_slug}}/tests/testdata/: README.md
