[project]
name = "uv-cookie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Logan Bennett", email = "bennett.j.logan@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
uv-cookie = "uv_cookie:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
