[project]
name = "uv-cookie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Logan Bennett", email = "bennett.j.logan@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.3",
    "pandas>=2.2.3",
]

[project.scripts]
uv-cookie = "uv_cookie:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.4",
]

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
extend-select = ["E501", "W", "N", "R", "I"]

[tool.pytest.ini_options]
testpaths=['tests/tests_to_run.py']

[tool.pyright]
exclude = ['.venv']
venvPath = '.'
venv = '.venv'