[project]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.description}}"
readme = "README.md"
authors = [
    { name = "{{cookiecutter.name}}", email = "{{cookiecutter.email}}" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "matplotlib>=3.10.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipython>=8.32.0",
    "python-dotenv>=1.0.1",
    "pytest>=8.3.4",
]

[project.scripts]
{{cookiecutter.project_slug}} = "{{cookiecutter.project_slug}}:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
extend-select = ["E501", "W", "N", "R", "I"]

[tool.pytest.ini_options]
testpaths=['tests']

[tool.pyright]
exclude = ['.venv']
venvPath = '.'
venv = '.venv'
